src/components/gallery/Gallery.scss
.Gallery {
    display: grid;
    place-items: center;

    gap: 10px;
    padding: 10px;

    & header {
        column-gap: 10px;
        column-count: 1;

        // Responsive columns
        @media (width > 560px) {
            column-count: 2;

            @media (width > 825px) {
                column-count: 3;

                @media (width > 1100px) {
                    column-count: 4;
                }
            }
        }
    }
}

